# rustam

./: Cargo.toml  README.md
examples/: conjugation.rs  data.rs  informal.rs  normalize.rs  pipeline.rs  spell.rs  stem_lemmatize.rs  token_split.rs  tokenize.rs
src/: api.rs  bigram.rs  conjugation.rs  constants.rs  data.rs  download.rs  embedding.rs  error.rs  fasttext.rs  full_pipeline.rs  informal.rs  lemmatizer.rs  lib.rs  normalizer.rs  pipeline.rs  sentence_tokenizer.rs  spell.rs  stemmer.rs  token_splitter.rs  translate.rs  types.rs  word2vec.rs  word_tokenizer.rs
src/corpus/: arman.rs  bijankhan.rs  dadegan.rs  degarbayan.rs  faspell.rs  hamshahri.rs  mirastext.rs  mizan.rs  mod.rs  naab.rs  ner.rs  persian_plain_text.rs  persica.rs  peykare.rs  pn_summary.rs  quran.rs  sentipers.rs  tnews.rs  treebank.rs  universal_dadegan.rs  verbvalency.rs  wikipedia.rs
tests/: integration_tests.rs
